--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -1,18 +1,15 @@
 name: Remote Dispatch Action Responder
 
-on: [repository_dispatch]
+on: 
+  repository_dispatch:
+    types: ["e2e"]
 
 jobs:
   ping-pong:
     runs-on: ubuntu-latest
     steps:
-      - name: Event Information
-        run: |
-          echo "Event '${{ github.event.action }}' received from '${{ github.event.client_payload.repository }}'"
-      - name: PONG - Dispatch response to received PING
-        if: github.event.action == 'ping'
-        run: |
-          curl -X POST https://api.github.com/repos/Fouz/coffee-shop/dispatches \
-          -H 'Accept: application/vnd.github.everest-preview+json' \
-          -u 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 \
-          --data '{"event_type": "pong", "client_payload": { "repository": "'"$GITHUB_REPOSITORY"'" }}'
+      - name: Get Specfic Release
+        if: ${{ github.event_name == 'repository_dispatch' }}
+        run: | 
+          echo "$github.event"
+          
