--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -11,4 +11,5 @@ jobs:
       - name: Get Specfic Release
         if: ${{ github.event_name == 'repository_dispatch' }}
         run: | 
-          echo ${{ github.event.client_payload  }}
+          echo ${{ github.event.client_payload.PR  }}
+          echo ${{ github.event.client_payload.repo  }}
