--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -12,7 +12,16 @@ jobs:
         if: ${{ github.event_name == 'repository_dispatch' }}
         run: | 
           echo ${{ github.event.client_payload.PR  }}
-          echo ${{ github.event.client_payload.repo  }}
+          echo ${{ github
+          ..event.client_payload.repo  }}
 
           export PR_SHA=$(curl -s -H "Accept: application/vnd.github.v3+json" -H "Authorization: token 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" https://api.github.com/repos/Fouz/coffee-shop/pulls/${{ github.event.client_payload.PR  }}/commits | jq -r '.[0].sha' )
+
+          curl \
+          -X POST \
+          -H "Accept: application/vnd.github.v3+json" \ 
+          -H "Authorization: token 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" \
+          https://api.github.com/repos/Fouz/coffee-shop/statuses/${PR_SHA} \
+          -d '{"state":"success","target_url":"https://example.com/build/status","description":"The build succeeded!","context":"continuous-integration/jenkins"}'
+
           curl -X POST -H "Authorization: token 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" -H "Accept: application/vnd.github.v3+json" https://api.github.com/repos/Fouz/coffee-shop/statuses/${PR_SHA} -d '{"state":"failure", "context": "run", "description": "Skipped for deployment PR."}'
