--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -2,26 +2,46 @@
 name: Remote Dispatch Action Responder
 
 on: 
+  push:
+    branches:
+      - master
   repository_dispatch:
     types: [e2e]
 
+# jobs:
+#   ping-pong:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Get Specfic Release
+#         if: ${{ github.event_name == 'repository_dispatch' }}
+#         run: | 
+#           echo ${{ github.event.client_payload.PR  }}
+#           echo ${{ github.event.client_payload.repo  }}
+#           export PR_SHA=$(curl -s -H "Accept: application/vnd.github.v3+json" -H "Authorization: token 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" https://api.github.com/repos/Fouz/coffee-shop/pulls/13/commits | jq -r '.[0].sha' )
+
+#           curl -X POST -H "Authorization: token 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" -H "Accept: application/vnd.github.v3+json" https://api.github.com/repos/Fouz/coffee-shop/statuses/${{ github.event.client_payload.PR  }} -d '{"state":"error", "context": "e2e test", "description": "e2e test failed", "target_url":"https://api.github.com/repos/Fouz/coffee-shop/commits/${PR_SHA}/status"}'
+
 jobs:
-  ping-pong:
+  build-and-test:
     runs-on: ubuntu-latest
     steps:
-      - name: Get Specfic Release
-        if: ${{ github.event_name == 'repository_dispatch' }}
-        run: | 
-          echo ${{ github.event.client_payload.PR  }}
-          echo ${{ github.event.client_payload.repo  }}
-          export PR_SHA=$(curl -s -H "Accept: application/vnd.github.v3+json" -H "Authorization: token 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" https://api.github.com/repos/Fouz/coffee-shop/pulls/13/commits | jq -r '.[0].sha' )
+    - uses: actions/checkout@v2
 
-          curl -X POST -H "Authorization: token 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" -H "Accept: application/vnd.github.v3+json" https://api.github.com/repos/Fouz/coffee-shop/statuses/${{ github.event.client_payload.PR  }} -d '{"state":"error", "context": "e2e test", "description": "e2e test failed", "target_url":"https://api.github.com/repos/Fouz/coffee-shop/commits/${PR_SHA}/status"}'
+    # Mock to test workflow
+    - name: Test app
+      id: test-app # will be referenced later
+      run: |
+        echo "Testing app (randomly fails)"
+        if [[ $(($RANDOM % 2)) == 0 ]]; then exit 0; else exit 1; fi
 
-# ----
-#           curl \
-#           -H "Accept: application/vnd.github.v3+json" \ 
-#           -H "Authorization: token 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" \
-#           https://api.github.com/repos/OWNER/REPO/commits/REF/statuses
+    # runs always
+    - name: test-clean
+      if: always()
+      run: echo "Cleanup after tests"
 
-# curl  -H "Accept: application/vnd.github.v3+json"   -H "Authorization: token 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"  https://api.github.com/repos/Fouz/coffee-shop/commits/5eaa6cccdaf5e1f0cc50e710022af2bce452bc89/status
+    # runs if previous jobs failed and test-app was not successful (failure/cancelled)
+    - name: action-slack
+      if: failure() && steps.test-app.outcome != 'success'
+      run: |
+        echo "Run action-slack"
+        echo "Result of test-app was '${{ steps.test-app.outcome }}'"
