--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -30,7 +30,7 @@ jobs:
     # Mock to test workflow
     - name: Test app
       id: test-app # will be referenced later
-      if: always()
+      continue-on-error: true
       run: |
         echo "Testing app (randomly fails)"
         if [[ $(($RANDOM % 2)) == 0 ]]; then exit 0; else exit 1; fi
