--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -30,7 +30,7 @@ jobs:
     # Mock to test workflow
     - name: Test app
       id: test-app # will be referenced later
-      if: always()
+      continue-on-error: true
       run: |
         exit 1
         # echo "Testing app (randomly fails)"
