--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -37,6 +37,7 @@ jobs:
 
     # runs always
     - name: test-clean
+      if: always()
       run: echo "Result of test-app was '${{ steps.test-app.outcome }}'"
 
     # runs if previous jobs failed and test-app was not successful (failure/cancelled)
