--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -27,17 +27,13 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    # Mock to test workflow
     - name: Test app
       id: test-app # will be referenced later
       run: |
         exit 1
-        # echo "Testing app (randomly fails)"
-        # if [[ $(($RANDOM % 2)) == 0 ]]; then exit 0; else exit 1; fi
 
-    # runs always
     - name: test-clean
-      if: always()
+      continue-on-error: true && ${{ github.event_name != 'repository_dispatch' }}
       run: echo "Result of test-app was '${{ steps.test-app.outcome }}'"
 
     # runs if previous jobs failed and test-app was not successful (failure/cancelled)
