--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -33,7 +33,7 @@ jobs:
         exit 1
 
     - name: test-clean
-      continue-on-error: true && ${{ github.event_name != 'repository_dispatch' }}
+      continue-on-error: true && ${{ github.event_name == 'repository_dispatch' }}
       run: echo "Result of test-app was '${{ steps.test-app.outcome }}'"
 
     # runs if previous jobs failed and test-app was not successful (failure/cancelled)
