--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -28,7 +28,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Test app
-      continue-on-error: true && ${{ github.event_name == 'repository_dispatch' }}
+      continue-on-error: true || ${{ github.event_name == 'repository_dispatch' }}
       id: test-app # will be referenced later
       run: |
         exit 1
