--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -8,7 +8,7 @@ on:
   repository_dispatch:
     types: [e2e]
 env:
-  continue_on_error: "true"
+  continue_on_error: true
 # jobs:
 #   ping-pong:
 #     runs-on: ubuntu-latest
@@ -28,10 +28,6 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: "A step"
-      env:
-        BRANCH_REF: "${{ github.ref }}"
-      run: continue_on_error=${{ github.event_name == 'repository_dispatch' }} 
 
     - name: Test app
       continue-on-error: ${{ env.continue_on_error }}
