--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -30,7 +30,7 @@ jobs:
 
 
     - name: Test app
-      continue-on-error: $continue_on_error
+      continue-on-error: ${{ contains( '${{ env.continue_on_error }}', '${{ github.event_name == 'repository_dispatch' }}') }}
       id: test-app # will be referenced later
       run: |
         exit 1
