--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -31,7 +31,8 @@ jobs:
 
 
     - name: Test app
-      continue-on-error: ${{ contains(env.continue_on_error, github.event_name != 'repository_dispatch' ) }}
+      continue-on-error: ${{  github.event_name != 'repository_dispatch'  }}
+      # continue-on-error: ${{ contains(env.continue_on_error, github.event_name != 'repository_dispatch' ) }}
       id: test-app # will be referenced later
       run: |
         exit 1
