--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -7,49 +7,25 @@ on:
       - master
   repository_dispatch:
     types: [e2e]
-env:
-  continue_on_error: true
-# jobs:
-#   ping-pong:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: Get Specfic Release
-#         if: ${{ github.event_name == 'repository_dispatch' }}
-#         run: | 
-#           echo ${{ github.event.client_payload.PR  }}
-#           echo ${{ github.event.client_payload.repo  }}
-#           export PR_SHA=$(curl -s -H "Accept: application/vnd.github.v3+json" -H "Authorization: token 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" https://api.github.com/repos/Fouz/coffee-shop/pulls/13/commits | jq -r '.[0].sha' )
-
-#           curl -X POST -H "Authorization: token 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" -H "Accept: application/vnd.github.v3+json" https://api.github.com/repos/Fouz/coffee-shop/statuses/${{ github.event.client_payload.PR  }} -d '{"state":"error", "context": "e2e test", "description": "e2e test failed", "target_url":"https://api.github.com/repos/Fouz/coffee-shop/commits/${PR_SHA}/status"}'
 
 jobs:
-  build-and-test:
+  check:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+      - name: Test app
+        continue-on-error: ${{  github.event_name != 'repository_dispatch'  }}
+        id: test-app 
+        run: |
+          exit 1
+          # echo "Testing app (randomly fails)"
+          # if [[ $(($RANDOM % 2)) == 0 ]]; then exit 0; else exit 1; fi
 
-
-
-    - name: Test app
-      # continue-on-error: ${{  github.event_name != 'repository_dispatch'  }}
-      continue-on-error: true
-      id: test-app # will be referenced later
-      run: |
-        exit 1
-
-    - name: test-clean
-      if: success()
-      run: |
-        echo "success"
-
-    - name: test-clean
-      if: failure()
-      run: |
-        echo "failure"
-
-    # runs if previous jobs failed and test-app was not successful (failure/cancelled)
-    # - name: action-slack
-    #   if: failure() && steps.test-app.outcome != 'success'
-    #   run: |
-    #     echo "Run action-slack"
-    #     echo "Result of test-app was '${{ steps.test-app.outcome }}'"
+      - name: test-clean
+        run: |
+          export PR_SHA=$(curl -s -H "Accept: application/vnd.github.v3+json" -H "Authorization: token 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" https://api.github.com/repos/Fouz/coffee-shop/pulls/13/commits | jq -r '.[0].sha' )
+          if ${{steps.test-app.outcome != 'success'}}
+          then
+          curl -X POST -H "Authorization: token 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" -H "Accept: application/vnd.github.v3+json" https://api.github.com/repos/Fouz/coffee-shop/statuses/${{ github.event.client_payload.PR  }} -d '{"state":"error", "context": "e2e test", "description": "e2e test failed", "target_url":"https://api.github.com/repos/Fouz/coffee-shop/commits/${PR_SHA}/status"}'
+          else
+          curl -X POST -H "Authorization: token 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" -H "Accept: application/vnd.github.v3+json" https://api.github.com/repos/Fouz/coffee-shop/statuses/${{ github.event.client_payload.PR  }} -d '{"state":"success", "context": "e2e test", "description": "e2e test failed", "target_url":"https://api.github.com/repos/Fouz/coffee-shop/commits/${PR_SHA}/status"}'
+          fi
