--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -1,9 +1,9 @@
 name: Remote Dispatch Action Responder
 
 on: 
-  push:
-    branches:
-      - master
+  # push:
+  #   branches:
+  #     - master
   repository_dispatch:
     types: [e2e]
 
@@ -27,10 +27,10 @@ jobs:
       - name: test-clean
         if: ${{  github.event_name == 'repository_dispatch'  }}
         run: |
-          export PR_SHA=$(curl -s -H "Accept: application/vnd.github.v3+json" -H "Authorization: token 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" https://api.github.com/repos/Fouz/coffee-shop/pulls/13/commits | jq -r '.[0].sha' )
+          export PR_SHA=$(curl -s -H "Accept: application/vnd.github.v3+json" -H "Authorization: token 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" https://api.github.com/repos/Fouz/coffee-shop/pulls/${{ github.event.client_payload.PR }}/commits | jq -r '.[0].sha' )
           if ${{steps.test-app.outcome != 'success'}}
           then
-          curl -X POST -H "Authorization: token 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" -H "Accept: application/vnd.github.v3+json" https://api.github.com/repos/Fouz/coffee-shop/statuses/${{ github.event.client_payload.PR  }} -d '{"state":"error", "context": "e2e test", "description": "e2e test failed", "target_url":"https://api.github.com/repos/Fouz/coffee-shop/commits/${PR_SHA}/status"}'
+          curl -X POST -H "Authorization: token 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" -H "Accept: application/vnd.github.v3+json" https://api.github.com/repos/Fouz/coffee-shop/statuses/$PR_SHA -d '{"state":"error", "context": "e2e test", "description": "e2e test failed"}'
           else
-          curl -X POST -H "Authorization: token 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" -H "Accept: application/vnd.github.v3+json" https://api.github.com/repos/Fouz/coffee-shop/statuses/${{ github.event.client_payload.PR  }} -d '{"state":"success", "context": "e2e test", "description": "e2e test failed", "target_url":"https://api.github.com/repos/Fouz/coffee-shop/commits/${PR_SHA}/status"}'
+          curl -X POST -H "Authorization: token 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" -H "Accept: application/vnd.github.v3+json" https://api.github.com/repos/Fouz/coffee-shop/statuses/$PR_SHA -d '{"state":"success", "context": "e2e test", "description": "e2e test failed"}'
           fi
